# doctor-who-library

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN_SYSTEM_ANALYSIS.md  ENRICHMENT_OPTIMIZATION_SUMMARY.md  NAMING_CONVENTIONS.md  README 2.md  README.md  analyze_database.py  doctor_who_library.db  pyproject 2.toml  pyproject 3.toml  pyproject 4.toml  pyproject 5.toml  pyproject 6.toml  pyproject.toml  supabase-schema.sql  test_enrichment.py  test_section_validation.py
.github/workflows/: ci.yml
data/raw/: DOCTOR WHO CHRONOLOGY.xlsx
frontend/: README.md  add-jsdoc-headers.sh  enrichment-monitor-optimized.mjs  enrichment-monitor.mjs  package-lock.json  package.json  update-headers.js  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AllStoriesView.tsx  AudioUniverseView.tsx  CollectionsView.tsx  ContentCard.tsx  ContentRail.tsx  ContinueWatchingView.tsx  DoctorEraView.tsx  DocumentariesView.tsx  EnhancedContentCard.tsx  EnrichmentBadge.tsx  EnrichmentEngagement.tsx  EnrichmentManager.tsx  EnrichmentStats.tsx  ErrorBoundary.tsx  FavoriteButton.tsx  FavoritesView.tsx  FeaturedView.tsx  Footer.tsx  FormatView.tsx  Header.tsx  HeaderNavigation.tsx  HeroSection.tsx  LibraryCard.tsx  LibraryGrid 2.tsx  LibraryGrid.tsx  LoadingSpinner.tsx  MainShowsView.tsx  MobileEnrichmentExperience.tsx  Navigation.tsx  NewAdditionsView.tsx  RecentlyAddedView.tsx  VirtualizedLibraryGrid.tsx  WatchedButton.tsx  WikiImage.tsx  WikiSummary.tsx  index.ts
frontend/src/components/common/: ErrorBoundary.tsx  FavoriteButton.tsx  WatchedButton.tsx  index.ts
frontend/src/components/enrichment/: EnrichmentBadge.tsx  EnrichmentManager.tsx  EnrichmentStats.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  HeaderNavigation.tsx  HeroSection.tsx  index.ts
frontend/src/components/ui/: Button.tsx  CollectionCard.tsx  ContentCard.tsx  ContentRail.tsx  EnrichmentBadge.tsx  LibraryCard.tsx  LibraryGrid.tsx  WikiImage.tsx  WikiSummary.tsx  index.ts  theme.ts
frontend/src/components/views/: CollectionsView.tsx  DoctorEraView.tsx  NewAdditionsView.tsx  index.ts
frontend/src/constants/: sections.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useRealTimeEnrichment.ts  useSearch.ts  useUserFeatures.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: AdminDashboard.tsx  ApiDocumentationPage.tsx  AuthCallbackPage.tsx  CollectionDetailPage.tsx  CollectionsPage.tsx  ExplorePage.tsx  FavoritesPage.tsx  HomePage 2.tsx  HomePage.tsx  ItemDetailPage.tsx  LandingPage.tsx  RecentPage.tsx  StoriesPage.tsx  UniversePage.tsx  WatchHistoryPage.tsx
frontend/src/services/: api.ts  cacheService.ts  realTimeService.ts
frontend/src/store/: libraryStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: enrichmentOptimization.ts  mobileOptimization.ts  sections.ts
src/doctor_who_library/: __init__.py  main.py
src/doctor_who_library/api/: app.py  main 2.py  main 3.py
src/doctor_who_library/api/routes/: conversion.py  health.py  library.py
src/doctor_who_library/application/services/: enrichment_service.py  library_service.py
src/doctor_who_library/cli/: __init__.py  commands.py
src/doctor_who_library/core/: config.py
src/doctor_who_library/database/: __init__.py  connection.py  models.py
src/doctor_who_library/domain/entities/: library_item.py
src/doctor_who_library/domain/models/: enrichment_display.py
src/doctor_who_library/domain/repositories/: library_item_repository.py
src/doctor_who_library/domain/services/: section_validation_service.py  wiki_service.py
src/doctor_who_library/domain/value_objects/: content_type.py  enrichment_status.py  section_name.py
src/doctor_who_library/infrastructure/database/: models.py
src/doctor_who_library/services/: excel_converter.py  wiki_enricher.py  wiki_scraper.py
src/doctor_who_library/utils/: wiki_parser 2.py
webscrape/: scrape_all_episodes 2.py
(+16 files in other folders)
