[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "doctor-who-library"
version = "1.0.0"
description = "Doctor Who Media Library - Plex-style browser with TARDIS Wiki integration"
authors = ["Doctor Who Library Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "doctor_who_library", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
aiosqlite = "^0.19.0"
# asyncpg = "^0.29.0"  # Removed due to Python 3.13 compatibility
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pandas = "^2.1.0"
openpyxl = "^3.1.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.0"
celery = "^5.3.0"
redis = "^5.0.0"
python-multipart = "^0.0.6"
structlog = "^23.2.0"
rich = "^13.7.0"
click = "^8.1.7"
dependency-injector = "^4.41.0"
nest-asyncio = "^1.5.8"
greenlet = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
dw-serve = "doctor_who_library.presentation.cli.commands:serve"
dw-cli = "doctor_who_library.presentation.cli.commands:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]